<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/recipe_detail_menu_app_bar_delete"
        android:title="@string/recipe_detail_app_bar_menu_delete"
        android:icon="@drawable/ic_delete_app_bar"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/recipe_detail_menu_app_bar_edit"
        android:title="@string/recipe_detail_app_bar_menu_edit"
        android:icon="@drawable/ic_edit_app_bar"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/recipe_detail_menu_app_bar_fav"
        android:title="@string/recipe_detail_app_bar_menu_fav"
        android:icon="@drawable/ic_favourite"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

</menu>