<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/search_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_dialog_title"
        android:padding="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@color/blueGray_700"/>

    <RadioGroup
        android:id="@+id/search_dialog_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/search_dialog_title"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/search_dialog_radio_mealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_dialog_mealType_radio"/>

        <RadioButton
            android:id="@+id/search_dialog_radio_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_dialog_time_radio"/>

    </RadioGroup>

    <RelativeLayout
        android:id="@+id/search_dialog_mealType_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_dialog_radio_group"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:hint="@string/search_dialog_select_mealType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/search_dialog_select_mealType"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="8dp"
                android:inputType="none"
                android:hint="@string/search_dialog_select_mealType"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/search_dialog_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/search_dialog_radio_group"
        android:padding="4dp"
        android:gravity="center"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search_dialog_hour"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_dialog_input_hours"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/search_dialog_input_hour"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search_dialog_minutes"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_dialog_input_minutes"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/search_dialog_input_minutes"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_marginTop="168dp">

        <Button
            android:id="@+id/search_dialog_btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_dialog_dismiss"
            android:textColor="@color/red_200"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/search_dialog_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_dialog_confirmation"
            android:textColor="@color/blue_500"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</RelativeLayout>