<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/recipe_card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_card_recipe"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_recipe_card_default"
                android:contentDescription="@string/recipe_card_img_description"/>

            <TextView
                android:id="@+id/recipe_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/recipe_card_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:id="@+id/recipe_card_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recipe_card_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/recipe_card_mealType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recipe_card_mealType"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_weight="1"
                    android:gravity="end"/>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>