<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RecipeFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_add"
        app:maxImageSize="32dp"
        android:backgroundTint="?attr/colorSecondary"
        app:tint="?attr/colorOnPrimary"/>

    <TextView
        android:id="@+id/tvEmptyRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_main_no_recipes"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/recipe_fragment_layout_showFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recipe_fragment_filters_text"
            style="@style/TextAppearance.AppCompat.Body2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/recipe_fragment_filterApplied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <Button
            android:id="@+id/recipe_fragment_btnUndo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recipe_fragment_undo_search"
            android:textAlignment="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>



    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/recipe_fragment_layout_showFilters"
        android:id="@+id/recipe_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</RelativeLayout>